--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,12 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_datetime_picker_plus: ^2.2.0
   uuid: ^4.4.0
-  intl: ^0.19.0
+  intl: ^0.18.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  build_runner: ^2.4.9
+  get_it: ^7.7.0
+  easy_localization: ^3.0.6
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +53,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  hive_generator: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -60,8 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/translations/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
